force-app/main/default/objects/maps__AdvRouteTemplate__c/maps__AdvRouteTemplate__c.object-meta.xml
<CustomObject>
    <description>This object houses specific information related to how Advanced Routes are generated over a set number of days.</description>
    <label>Maps Advanced Route Template</label>
    <nameField>
        <label>Maps Advanced Route Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>