force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__ActivityDateFieldOnFutureVisit__c.field-meta.xml
<CustomField>
    <fullName>maps__ActivityDateFieldOnFutureVisit__c</fullName>
    <description>This is the date field on the future visit record used to determine date of activity</description>
    <label>Activity Date Field on Future Visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>