force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__ActivityEndDateFieldOnFutureVisit__c.field-meta.xml
<CustomField>
    <fullName>maps__ActivityEndDateFieldOnFutureVisit__c</fullName>
    <description>This is the end date field on the future visit record used to determine date of activity</description>
    <label>Activity End Date Field on Future Visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>