force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__AdvRouteRoutableObject__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteRoutableObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will look up to the Advanced Route routable object configuration associated with the template</description>
    <label>Maps Advanced Route Routable Object</label>
    <referenceTo>maps__AdvRouteRoutableObject__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Templates</relationshipLabel>
    <relationshipName>AdvRouteTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>