force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__AdvRouteTemplate__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the main Advanced Route template when routing multiple base objects on the same template</description>
    <label>Maps Advanced Route Template</label>
    <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Templates</relationshipLabel>
    <relationshipName>AdvRouteTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>