force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__BaseFilterFilters__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseFilterFilters__c</fullName>
    <label>Base Filter Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>