force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__BaseFilterLogicOrder__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseFilterLogicOrder__c</fullName>
    <label>Base Filter Logic Order</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>