force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__BaseFilterWhereClause__c.field-meta.xml
<CustomField>
    <fullName>maps__BaseFilterWhereClause__c</fullName>
    <label>Base Filter Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>