force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__CompletedTabsPicklist__c.field-meta.xml
<CustomField>
    <fullName>maps__CompletedTabsPicklist__c</fullName>
    <description>These are the completed tabs for the template</description>
    <label>Completed Tabs Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PlanInformation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>