force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__CompletedVisitObject__c.field-meta.xml
<CustomField>
    <fullName>maps__CompletedVisitObject__c</fullName>
    <description>This is the object that describes a visit</description>
    <label>Completed Visit Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>