force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__CompletedVisitsQuery__c.field-meta.xml
<CustomField>
    <fullName>maps__CompletedVisitsQuery__c</fullName>
    <description>This is the query to determine an object has been visited</description>
    <label>Completed Visits Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>