force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__DaysBetweenOptimizations__c.field-meta.xml
<CustomField>
    <fullName>maps__DaysBetweenOptimizations__c</fullName>
    <description>This represents how many days will go before optimizing each user</description>
    <label>Days Between Optimizations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>