force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__DaysBetweenOptimizationsFactor__c.field-meta.xml
<CustomField>
    <fullName>maps__DaysBetweenOptimizationsFactor__c</fullName>
    <label>Days Between Optimizations Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>