force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__DaysOfWeekToRouteFor__c.field-meta.xml
<CustomField>
    <fullName>maps__DaysOfWeekToRouteFor__c</fullName>
    <description>These are the days of the week that the route can calculate for</description>
    <label>Day(s) of Week to Route for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteDaysOfWeek</valueSetName>
    </valueSet>
</CustomField>