force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__DaysToInsert__c.field-meta.xml
<CustomField>
    <fullName>maps__DaysToInsert__c</fullName>
    <description>This is the days to insert</description>
    <label>Days to Insert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>