force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__DaysToInsertUnit__c.field-meta.xml
<CustomField>
    <fullName>maps__DaysToInsertUnit__c</fullName>
    <description>This is the days to insert unit</description>
    <label>Days to Insert Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>