force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__DayToOptimizeOn__c.field-meta.xml
<CustomField>
    <fullName>maps__DayToOptimizeOn__c</fullName>
    <description>Thiese are the days of the week optimizations can run on</description>
    <label>Day(s) To Optimize On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteDaysOfWeek</valueSetName>
    </valueSet>
</CustomField>