force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__Description__c.field-meta.xml
<CustomField>
    <fullName>maps__Description__c</fullName>
    <description>A short description of the template</description>
    <inlineHelpText>A short description of the template
Max Length: 255</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>