force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__EndDate__c.field-meta.xml
<CustomField>
    <fullName>maps__EndDate__c</fullName>
    <description>The date the template ends on</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>