force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__FrequencyStartDate__c.field-meta.xml
<CustomField>
    <fullName>maps__FrequencyStartDate__c</fullName>
    <description>This will be the date that all frequency calculations should start on</description>
    <label>Frequency Start Date</label>
    <type>Date</type>
</CustomField>