force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__FrequencyStartsOnTemplateStart__c.field-meta.xml
<CustomField>
    <fullName>maps__FrequencyStartsOnTemplateStart__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This determines if our frequency calculation should start when the template starts or should be a rolling frequency</description>
    <inlineHelpText>uncheck this if your performance period does not line up with your template start</inlineHelpText>
    <label>Frequency Starts on Template Start</label>
    <type>Checkbox</type>
</CustomField>