force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__FutureVisitFilters__c.field-meta.xml
<CustomField>
    <fullName>maps__FutureVisitFilters__c</fullName>
    <description>This is a JSON object containing the visit filter information</description>
    <label>Future Visit Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>