force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__FutureVisitObject__c.field-meta.xml
<CustomField>
    <fullName>maps__FutureVisitObject__c</fullName>
    <description>This is the object that describes a future visit</description>
    <label>Future Visit Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>