force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__FutureVisitsQuery__c.field-meta.xml
<CustomField>
    <fullName>maps__FutureVisitsQuery__c</fullName>
    <description>This is the query to determine an objects future visits</description>
    <label>Future Visits Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>