force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__IsRepeating__c.field-meta.xml
<CustomField>
    <fullName>maps__IsRepeating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag tells us if a template should continue to be used even after the current end date</description>
    <label>Repeating</label>
    <type>Checkbox</type>
</CustomField>