force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__MaxSegmentTravelTime__c.field-meta.xml
<CustomField>
    <fullName>maps__MaxSegmentTravelTime__c</fullName>
    <label>Max Segment Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>