force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__MaxTotalDistance__c.field-meta.xml
<CustomField>
    <fullName>maps__MaxTotalDistance__c</fullName>
    <label>Max Total Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>