force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__PreventSameShiftVisits__c.field-meta.xml
<CustomField>
    <fullName>maps__PreventSameShiftVisits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Same Shift Visits</label>
    <type>Checkbox</type>
</CustomField>