force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__PrioritizationStrictness__c.field-meta.xml
<CustomField>
    <fullName>maps__PrioritizationStrictness__c</fullName>
    <defaultValue>&apos;4&apos;</defaultValue>
    <description>This tells Maps Advanced Route how strict to account for the priorities during routing.  1 is least strict and 7 is most strict.</description>
    <label>Prioritization Strictness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>