force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__RepeatUntilDate__c.field-meta.xml
<CustomField>
    <fullName>maps__RepeatUntilDate__c</fullName>
    <description>This date is the date  a repeating template will stop being used</description>
    <label>Repeat Until Date</label>
    <type>Date</type>
</CustomField>