force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__RoutableObjectOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>maps__RoutableObjectOrderNumber__c</fullName>
    <description>This is the tab number for routable objects on the template when routing multiple base objects</description>
    <label>Routable Object Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>