force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__RouteDurationInterval__c.field-meta.xml
<CustomField>
    <fullName>maps__RouteDurationInterval__c</fullName>
    <description>This is the route duration interval</description>
    <label>Route Duration Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>