force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__RouteDurationType__c.field-meta.xml
<CustomField>
    <fullName>maps__RouteDurationType__c</fullName>
    <description>This is the duration type of the route</description>
    <label>Route Duration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteDurationTypes</valueSetName>
    </valueSet>
</CustomField>