force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__RoutesAndScheduleConfig__c.field-meta.xml
<CustomField>
    <fullName>maps__RoutesAndScheduleConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will look up to the Maps Routes and Schedule Config setting used for outputs and future visits</description>
    <label>Routes and Schedule Config</label>
    <referenceTo>maps__CalEventBaseObj__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Templates</relationshipLabel>
    <relationshipName>AdvRouteTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>