force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__RunAutoOptimization__c.field-meta.xml
<CustomField>
    <fullName>maps__RunAutoOptimization__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Run Auto Reoptimization</label>
    <type>Checkbox</type>
</CustomField>