force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__SavedQueryId__c.field-meta.xml
<CustomField>
    <fullName>maps__SavedQueryId__c</fullName>
    <description>This will be the id of the related Saved Query record for Maps</description>
    <label>Saved Query Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>