force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__SelectedOutputTypes__c.field-meta.xml
<CustomField>
    <fullName>maps__SelectedOutputTypes__c</fullName>
    <description>These are the selected output types for the template</description>
    <label>Selected Output Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>