force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__StartDate__c.field-meta.xml
<CustomField>
    <fullName>maps__StartDate__c</fullName>
    <description>The date the template starts on</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>