force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__TemplateObject__c.field-meta.xml
<CustomField>
    <fullName>maps__TemplateObject__c</fullName>
    <description>This is the object that the template will process</description>
    <label>Template Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>