force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__TemplateObjectFieldOnFutureVisit__c.field-meta.xml
<CustomField>
    <fullName>maps__TemplateObjectFieldOnFutureVisit__c</fullName>
    <description>This is the field on the future visit record that relates the visit to the template object</description>
    <label>Template Object Field on Future Visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>