force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__TemplateObjectLatitudeField__c.field-meta.xml
<CustomField>
    <fullName>maps__TemplateObjectLatitudeField__c</fullName>
    <description>This is the field that holds the latitude on the template object</description>
    <label>Template Object Latitude Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>