force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__TemplateObjectLongitudeField__c.field-meta.xml
<CustomField>
    <fullName>maps__TemplateObjectLongitudeField__c</fullName>
    <description>This is the longitude field on the template object</description>
    <label>Template Object Longitude Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>