force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__TooltipFieldApis__c.field-meta.xml
<CustomField>
    <fullName>maps__TooltipFieldApis__c</fullName>
    <description>This field holds a JSON array of field apis to be used for tooltips</description>
    <label>Tooltip Field Apis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>