force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__UserField__c.field-meta.xml
<CustomField>
    <fullName>maps__UserField__c</fullName>
    <description>This is the field that will be compared on the object to determine if that object is owned/maintained by a route template user</description>
    <label>User Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>