force-app/main/default/objects/maps__AdvRouteTemplate__c/fields/maps__VisitType__c.field-meta.xml
<CustomField>
    <fullName>maps__VisitType__c</fullName>
    <description>This is for determining which visit windows should be used based on visit type</description>
    <label>Visit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>